--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<div>sss</div>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,viewport-fit=cover,minimum-scale=1,maximum-scale=1,user-scalable=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge"><meta name="renderer" content="webkit">
+        <meta name="layoutmode" content="standard"><meta name="imagemode" content="force"><meta name="wap-font-scale" content="no"><meta name="format-detection" content="telephone=no">
+        <meta name="keywords" content="自我介绍">
+        <meta name="description" content="自我介绍">
+        <meta property="qc:admins" content="137036576341176375">
+        <meta name="google-site-verification" content="3efWlNkPRz_3PQJDo_idDjvdlvYH3f4cCH8kp_6FvdQ">
+        <meta name="format-detection" content="telephone=no">
+        <meta name="baidu-tc-cerfication" content="f02c83ae32e698b1003fc31a62124a0b">
+        <meta name="baidu-site-verification" content="OcFyAv2MOv">
+        <meta name="360-site-verification" content="47aeb748c3c8384b89f75e48e2dc382c">
+        <meta name="shenma-site-verification" content="fb9077aff6d33201126008a82a5a0113_1432698248">
+        <title>喻曦自我介绍</title><link rel="dns-prefetch" href="//lf3-cdn2-tos.bytegoofy.com">
+        <link rel="apple-touch-icon-precomposed" href="//sf1-cdn-tos.huoshanstatic.com/obj/ies.fe.mis/814c8ed898364418e2ded3a00312b49d.png">
+        <link rel="shortcut icon" href="//sf1-cdn-tos.huoshanstatic.com/obj/ies.fe.mis/814c8ed898364418e2ded3a00312b49d.png" type="image/x-icon">
+    </head>
+    <body>
+        <img src="" style="width:100%"/>
+    </body>
+</html>
