--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>喻曦自我介绍</title><link rel="dns-prefetch" href="//lf3-cdn2-tos.bytegoofy.com">
     </head>
     <body>
-        <img src="https://github.com/yodoe/yodoe.github.io/blob/main/desc.png" style="width:100%"/>
+        <img src="https://raw.githubusercontent.com/yodoe/yodoe.github.io/main/desc.png" style="width:100%"/>
     </body>
 </html>
