--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,viewport-fit=cover,minimum-scale=1,maximum-scale=1,user-scalable=no">
-        <meta http-equiv="x-ua-compatible" content="ie=edge"><meta name="renderer" content="webkit">
-        <title>喻曦自我介绍</title><link rel="dns-prefetch" href="//lf3-cdn2-tos.bytegoofy.com">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="renderer" content="webkit">
+        <title>喻曦自我介绍</title>
+        <style>
+           body{
+              margin: 0;
+              padding: 0;
+           }
+        </style>
     </head>
     <body>
-        <img src="https://raw.githubusercontent.com/yodoe/yodoe.github.io/main/yuxidesc.png" style="width:100%"/>
+       <div style="display: flex;justify-content: center;align-items: flex-start;" id="container">
+        <img src="https://raw.githubusercontent.com/yodoe/yodoe.github.io/main/yuxidesc.png" style="height:100%;"/>
+      </div>
+      <script>
+         var container = document.getElementById('container');
+         container.style.height = window.innerHeight + 'px';
+      </script>
     </body>
 </html>
