--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <script>
          var container = document.getElementById('container');
-         container.style.height = window.innerHeight + 'px';;
+         container.style.height = window.innerHeight + 'px';
       </script>
     </body>
 </html>
