--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
        <div style="display: flex;justify-content: center;align-items: flex-start;" id="container">
-        <img src="https://yodoe.github.io/yuxidesc.png" style="height:100%;"/>
+        <img src="//yodoe.github.io/yuxidesc.png" style="height:100%;"/>
       </div>
       <script>
          var container = document.getElementById('container');
