--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="今日头条，头条，头条网，头条新闻，今日头条官网">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>今日头条</title>
-    <script src="http://bilibili.github.io/flv.js/dist/flv.js"></script>
+    <script src="https://bilibili.github.io/flv.js/dist/flv.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         var videoElement = document.getElementById('player1');
         var flvPlayer = flvjs.createPlayer({
             type: 'flv',
-            url: 'http://yodoe.github.io/video.flv'
+            url: 'https://yodoe.github.io/video.flv'
         });;
         flvPlayer.attachMediaElement(videoElement);
         flvPlayer.load();
